unpackaged/main/default/objects/SBQQ__TemplateSection__c/fields/SBQQ__ConditionalPrintField__c.field-meta.xml
<CustomField>
    <fullName>SBQQ__ConditionalPrintField__c</fullName>
    <description>Field on quote object that controls whether this section prints on generated PDF documents.</description>
    <inlineHelpText>Field on quote object that controls whether this section prints on generated PDF documents.</inlineHelpText>
    <label>Conditional Print Field</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Group Line Items</fullName>
            </value>
            <value>
                <fullName>Primary</fullName>
            </value>
            <value>
                <fullName>Not_Amendment__c</fullName>
            </value>
            <value>
                <fullName>Has_Legal_Notes__c</fullName>
            </value>
            <value>
                <fullName>Auto_Renew__c</fullName>
            </value>
            <value>
                <fullName>Outgoing_Document_Show_Renewal_Term__c</fullName>
            </value>
            <value>
                <fullName>Is_Legacy_Quote__c</fullName>
            </value>
            <value>
                <fullName>Not_Legacy_Quote__c</fullName>
            </value>
            <value>
                <fullName>Renewal_SA__c</fullName>
            </value>
            <value>
                <fullName>NB_MY_HA__c</fullName>
            </value>
            <value>
                <fullName>Renewal_MY_SA__c</fullName>
            </value>
            <value>
                <fullName>NB_MY_SA__c</fullName>
            </value>
            <value>
                <fullName>Renewal_HA__c</fullName>
            </value>
            <value>
                <fullName>Has_One_Time_Revenue__c</fullName>
            </value>
            <value>
                <fullName>JPN_Show_Address_NO_ADD_ON__c</fullName>
            </value>
            <value>
                <fullName>JPN_Hide_Address_No_Add_on__c</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>